@@ -13,16 +13,27 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.version>5.10.2</junit.version>
         <javafx.version>22.0.1</javafx.version>
+        <maven.compiler.source>23</maven.compiler.source>
+        <maven.compiler.target>23</maven.compiler.target>
     </properties>
 
     <dependencies>
-
+        <!-- JasperReports -->
         <dependency>
             <groupId>net.sf.jasperreports</groupId>
             <artifactId>jasperreports</artifactId>
             <version>7.0.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>net.sf.jasperreports</groupId>
+            <artifactId>jasperreports-charts</artifactId>
+            <version>7.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>net.sf.jasperreports</groupId>
+            <artifactId>jasperreports-fonts</artifactId>
+            <version>7.0.1</version>
+        </dependency>
 
 
         <!-- JavaFX core -->
@@ -67,12 +78,6 @@
             </exclusions>
         </dependency>
 
-        <!-- JSON -->
-        <dependency>
-            <groupId>org.json</groupId>
-            <artifactId>json</artifactId>
-            <version>20210307</version>
-        </dependency>
 
         <!-- JUnit 5 -->
         <dependency>
@@ -112,8 +117,14 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
                 <configuration>
-                    <source>22</source>
-                    <target>22</target>
+                    <source>23</source>
+                    <target>23</target>
+                    <compilerArgs>
+                        <!-- Desactivar el sistema de módulos -->
+                        <arg>--add-modules=ALL-SYSTEM</arg>
+                        <arg>--add-opens=java.base/java.lang=ALL-UNNAMED</arg>
+                        <arg>--add-opens=java.base/java.util=ALL-UNNAMED</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
 
@@ -127,12 +138,12 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>com.example.gerenteapp.HelloApplication</mainClass>
-                            <modules>
-                                javafx.controls
-                                javafx.fxml
-                                javafx.graphics
-                                javafx.swing
-                            </modules>
+                            <options>
+                                <!-- Configuraciones adicionales para JavaFX -->
+                                <option>--add-modules=ALL-SYSTEM</option>
+                                <option>--add-opens=java.base/java.lang=ALL-UNNAMED</option>
+                                <option>--add-opens=java.base/java.util=ALL-UNNAMED</option>
+                            </options>
                         </configuration>
                     </execution>
                 </executions>
